--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="banner-container">
         <i class="rope"></i>
         <i class="banner">
-        i have a miss you so much, can we try again and do it right this time?
+        balikan yuk?
         <i class="triangle"></i>
     </i>
     </div>
