--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="banner-container">
         <i class="rope"></i>
         <i class="banner">
-        bingung mau diisi apa,hehe
+        gausah dibales, cmn mau diliat aja
         <i class="triangle"></i>
     </i>
     </div>
