--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="banner-container">
         <i class="rope"></i>
         <i class="banner">
-        gausah dibales, cmn mau diliat aja
+        i love u, always.
         <i class="triangle"></i>
     </i>
     </div>
